main.css
@font-face {
    font-family: Miso;
    src: url('./assets/fonts/miso-regular.otf');
}

@font-face {
    font-family: Samarkan;
    src: url('./assets/fonts/SAMAN___.TTF');
}

@font-face {
    font-family: IBM;
    src: url('./assets/fonts/IBMPlexMono-Regular.ttf');
}

@font-face {
    font-family: Graduate;
    src: url('./assets/fonts/Graduate-Regular.ttf');
}


::-webkit-scrollbar {
    width: 8px;
}

::-webkit-scrollbar-thumb {
    background-color: #fed201;
    border-radius: 50px;
    border: 1px solid white;
}

::-webkit-scrollbar-track {
    background-color: transparent;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;

}

.loader-container {
    /* display: none; */
    position: fixed;
    top: 0;
    left: 0;
    /* Optional background  */
    width: 100%;
    height: 100%;
    /* background: #000000; */
    background: radial-gradient(circle at 10% 20%, rgb(149, 219, 254) 0%, rgb(7, 134, 197) 90.1%);
    z-index: 997;
    /* Ensure it's above other content  */
}

#loader-lottie-div {
    position: absolute;
    top: 5%;
    left: 50%;
    transform: translate(-50%, 0%);
    width: 70px;
    height: 70px;
    z-index: 100;
}

#loader-lottie {
    width: 100%;
    height: 100%;
}

.loader-video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    /* Adjust video within container */
}


.loader-hidden {
    opacity: 0;
    visibility: hidden;
}

.loader-mobile {
    display: none;
}


/* Scroll to top button */
.buttonTop {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    background-color: #fed201;
    border: none;
    font-weight: 600;
    display: flex;
    align-items: center;
    justify-content: center;
    /* box-shadow: 0px 0px 0px 4px rgba(238, 238, 238, 0.8); */
    cursor: pointer;
    transition: all 0.1s ease-in-out;
    overflow: hidden;
    position: fixed;
    bottom: 0;
    right: 0;
    margin: 2vh 1.5vw;
    z-index: 9;
}


.svgIcon {
    width: 12px;
    transition-duration: 0.1s;
    transition: all 0.1s ease-in-out;
}

.svgIcon path {
    fill: rgb(0, 0, 0);
}

.buttonTop:hover {
    transition: all 0.3s ease-in-out;
}


article {
    opacity: 0;
    background: transparent;
    position: absolute;
    top: 0;
}


.landingpage {
    position: relative;
    background: url('./assets/images/home-background-reduced-new-latest.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    min-height: 100vh;
    padding-bottom: 45vh;
}

.row {
    padding-top: 5vh;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: center;
    justify-items: center;
}

.custom-img {
    width: 80%;
}

.navigation-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    text-align: center;
}

.navigation-list a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.nav-text {
    text-align: center;
    font-family: 'Miso';
    font-size: 2.5vw;
    font-style: normal;
    line-height: normal;
    letter-spacing: 12.32px;
    padding: 1.7vh;
    opacity: 0.9;
    transition: opacity 0.3s ease-in-out;
}


.nav-text:hover {
    opacity: 1;
    transition: opacity 0.3s ease-in-out;
    background-image: url('./assets/images/streak-paint.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    
}

.nav-text:hover a {
    color: #0A579B;
}


/*Date Display*/
#date-display {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 5vh;
}

#date-p {
    font-family: 'IBM';
    font-size: 5vw;
    color: #000;
    transition: color 0.5s ease-in-out;
}

#date-p:hover {
    color: #FED201;
    transition: color 0.5s ease-in-out;
}

.button-register-div {
    display: flex;
    justify-content: center;
}

button {
    position: relative;
    background: white;
    font-size: 1.2rem;
    font-weight: 500;
    color: #181818;
    border: 3px solid #FEC195;
    border-radius: 8px;
    box-shadow: 0 0 0 #fec1958c;
    transition: all .3s ease-in-out;
    cursor: pointer;
    text-align: center;
    font-family: 'IBM';
    font-style: normal;
    font-weight: 600;
    line-height: normal;
    letter-spacing: 6px;
    padding: 2vh 2vh;
}

.star-1 {
    position: absolute;
    top: 20%;
    left: 20%;
    width: 25px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0.05, 0.83, 0.43, 0.96);
}

.star-2 {
    position: absolute;
    top: 45%;
    left: 45%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-3 {
    position: absolute;
    top: 40%;
    left: 40%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all 1s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-4 {
    position: absolute;
    top: 20%;
    left: 40%;
    width: 8px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .8s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-5 {
    position: absolute;
    top: 25%;
    left: 45%;
    width: 15px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .6s cubic-bezier(0, 0.4, 0, 1.01);
}

.star-6 {
    position: absolute;
    top: 5%;
    left: 50%;
    width: 5px;
    height: auto;
    filter: drop-shadow(0 0 0 #fffdef);
    z-index: -5;
    transition: all .8s ease;
}

button:hover {
    background: #FED201;
    color: #0A579B;
    box-shadow: 0 0 25px #fec1958c;
}

button:hover .star-1 {
    position: absolute;
    top: -80%;
    left: -30%;
    width: 25px;
    height: auto;
    filter: drop-shadow(0 0 10px #fffdef);
    z-index: 2;
}
/* ... */

